--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <script>
       const redirects = {
         "docasaw": "https://ra-sl.com/dp-B07NQMN8CNLP",
-        "ubfen": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD"
+        "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
+        
         // Add more shortlinks here, example lang to^
       };
 
