--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <script>
       const redirects = {
         "docasaw": "https://ra-sl.com/dp-B07NQMN8CNLP",
-        "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
-        
-        // Add more shortlinks here, example lang to^
+        "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD"
+          // Add more shortlinks here, example lang to^
       };
 
       function getParam(name) {
