--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       const redirects = {
         "docasaw": "https://ra-sl.com/dp-B07NQMN8CNLP",
         "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
-        "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O"
+        "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O",
+        "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ"  
           // Add more shortlinks here, example lang to^
       };
 
