--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         "docasaw": "https://ra-sl.com/dp-B07NQMN8CNLP",
         "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
         "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O",
-        "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ"  
+        "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ",
+        "pomade": " https://videoguidelines.com/dp-B0C1KL59X1J"
           // Add more shortlinks here, example lang to^
       };
 
