--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
         "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O",
         "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ",
-        "pomade": "https://videoguidelines.com/dp-B0C1KL59X1J"
+        "gel": "https://videoguidelines.com/dp-B0C1KL59X1J"
           // Add more shortlinks here, example lang to^
       };
 
