--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         "sneakers": "https://lifestylesecretreview.com/dp-B0DTHLPQ6GVVD",
         "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O",
         "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ",
-        "gel": "https://videoguidelines.com/dp-B0C1KL59X1J"
+        "gel": "https://videoguidelines.com/dp-B0C1KL59X1J",
+        "lenovo": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
+        "couch": "https://videoguidelines.com/dp-B0BV9WT62KJI"
+        
           // Add more shortlinks here, example lang to^
       };
 
