--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
         "bluetooth": "https://videoguidelines.com/dp-B09LD44NW6O",
         "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ",
         "gel": "https://videoguidelines.com/dp-B0C1KL59X1J",
-        "lenovo": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
-        "couch": "https://videoguidelines.com/dp-B0BV9WT62KJI"
-        
+        "mouse": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
+        "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI"
           // Add more shortlinks here, example lang to^
       };
 
