--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         "lamp": "https://videoguidelines.com/dp-B01A9CF8HSAJ",
         "gel": "https://videoguidelines.com/dp-B0C1KL59X1J",
         "mouse": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
-        "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI"
+        "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI",
+        "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL"
           // Add more shortlinks here, example lang to^
       };
 
