--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         "gel": "https://videoguidelines.com/dp-B0C1KL59X1J",
         "mouse": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
         "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI",
-        "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL"
+        "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL",
+        "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS"
           // Add more shortlinks here, example lang to^
       };
 
