--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         "mouse": "https://nelsonfoto.com/dp-B0DJH1DPCCMK",
         "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI",
         "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL",
-        "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS"
+        "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS",
+        "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI"
           // Add more shortlinks here, example lang to^
       };
 
