--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         "cat": "https://videoguidelines.com/dp-B0BV9WT62KJI",
         "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL",
         "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS",
-        "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI"
+        "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI",
+        "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA"
           // Add more shortlinks here, example lang to^
       };
 
