--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         "bpc": "https://nelsonfoto.com/dp-B0D14K88GCKL",
         "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS",
         "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI",
-        "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA"
+        "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA",
+        "massage": "https://ra-sl.com/dp-B0D16W8531XF"
           // Add more shortlinks here, example lang to^
       };
 
