--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         "kamrui": "https://econsumerproductreviews.com/dp-B0DZ1VL4JJAS",
         "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI",
         "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA",
-        "massage": "https://ra-sl.com/dp-B0D16W8531XF"
+        "massage": "https://ra-sl.com/dp-B0D16W8531XF",
+        "tripod": " https://videoguidelines.com/dp-B0CJ4QR88BCD"
           // Add more shortlinks here, example lang to^
       };
 
