--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         "alloy": "https://videoguidelines.com/dp-B0DNLSHV7YJI",
         "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA",
         "massage": "https://ra-sl.com/dp-B0D16W8531XF",
-        "tripod": " https://videoguidelines.com/dp-B0CJ4QR88BCD"
+        "tripod": " https://videoguidelines.com/dp-B0CJ4QR88BCD",
+        "jacket": "https://ra-sl.com/dp-B0C748VLP6AY"
           // Add more shortlinks here, example lang to^
       };
 
