--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         "eight": " https://econsumerproductreviews.com/dp-B08Z2BTJSTCA",
         "massage": "https://ra-sl.com/dp-B0D16W8531XF",
         "tripod": " https://videoguidelines.com/dp-B0CJ4QR88BCD",
-        "jacket": "https://ra-sl.com/dp-B0C748VLP6AY"
+        "jacket": "https://ra-sl.com/dp-B0C748VLP6AY",
+        "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW" 
           // Add more shortlinks here, example lang to^
       };
 
