--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         "massage": "https://ra-sl.com/dp-B0D16W8531XF",
         "tripod": "https://videoguidelines.com/dp-B0CJ4QR88BCD",
         "jacket": "https://ra-sl.com/dp-B0C748VLP6AY",
-        "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW" 
+        "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW",
+        "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq"
           // Add more shortlinks here, example lang to^
       };
 
