--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         "tripod": "https://videoguidelines.com/dp-B0CJ4QR88BCD",
         "jacket": "https://ra-sl.com/dp-B0C748VLP6AY",
         "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW",
-        "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq"
+        "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq",
+        "shoes": "https://onlinehairguide.com/best_walking__shoesc"
           // Add more shortlinks here, example lang to^
       };
 
