--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         "jacket": "https://ra-sl.com/dp-B0C748VLP6AY",
         "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW",
         "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq",
-       "scrub": "https://onlinehairguide.com/dp-B00DCC70SSQA"
+        "scrub": "https://onlinehairguide.com/dp-B00DCC70SSQA",
+        "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3"
           // Add more shortlinks here, example lang to^
       };
 
