--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         "whitenoise": "https://ra-sl.com/dp-B0D22R2T9FAW",
         "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq",
         "scrub": "https://onlinehairguide.com/dp-B00DCC70SSQA",
-        "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3"
+        "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3",
+        "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN"
+          
           // Add more shortlinks here, example lang to^
       };
 
