--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         "washingmachine": "https://onlinehairguide.com/best_the__best_washing_machinesq",
         "scrub": "https://onlinehairguide.com/dp-B00DCC70SSQA",
         "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3",
-        "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN"
+        "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN",
+        "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD"
           
           // Add more shortlinks here, example lang to^
       };
