--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         "scrub": "https://onlinehairguide.com/dp-B00DCC70SSQA",
         "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3",
         "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN",
-        "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD"
+        "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD",
+        "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP"
           
           // Add more shortlinks here, example lang to^
       };
