--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         "jacket": "https://lifestylesecretreview.com/dp-B0DGR9BSK3K3",
         "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN",
         "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD",
-        "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP"
+        "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP",
+        "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7"
           
           // Add more shortlinks here, example lang to^
       };
