--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         "sunscreen": "https://ra-sl.com/dp-B07KGKS7NCCN",
         "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD",
         "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP",
-        "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7"
+        "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7",
+        "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz"
           
           // Add more shortlinks here, example lang to^
       };
