--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         "steam": "https://onlinehairguide.com/dp-B0DY77DR64ZD",
         "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP",
         "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7",
-        "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz"
+        "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz",
+        "petcove": "https://best.hochzeits-shopping.com/j9MR"
           
           // Add more shortlinks here, example lang to^
       };
