--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         "waterdrop": "https://www.amazon.com/dp/B07P1XFYJP",
         "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7",
         "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz",
-        "petcove": "https://best.hochzeits-shopping.com/j9MR"
+        "petcove": "https://best.hochzeits-shopping.com/j9MR",
+        "scale": "best.hochzeits-shopping.com/jDba"
           
           // Add more shortlinks here, example lang to^
       };
