--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         "bone broth": "https://freebiesdealsandrewards.com/dp-B0DSJWF6K7",
         "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz",
         "petcove": "https://best.hochzeits-shopping.com/j9MR",
-        "scale": "best.hochzeits-shopping.com/jDba"
+        "scale": "https://www.amazon.com/dp/B0BRQF7DC8"
           
           // Add more shortlinks here, example lang to^
       };
