--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         "deo": "https://hochzeits-shopping.com/dp-best_best__anti_perspirantsz",
         "petcove": "https://best.hochzeits-shopping.com/j9MR",
         "scale": "https://www.amazon.com/dp/B0BRQF7DC8",
-        "renpho": "https://www.amazon.com/dp/B0BRQF7DC8"
+        "renpho": "https://www.amazon.com/dp/B0BRQF7DC8",
+        "link": "https://x.com/jamaxo97324/status/1980239901246312881"
           
           // Add more shortlinks here, example lang to^
       };
