--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         "petcove": "https://best.hochzeits-shopping.com/j9MR",
         "scale": "https://www.amazon.com/dp/B0BRQF7DC8",
         "renpho": "https://www.amazon.com/dp/B0BRQF7DC8",
-        "link": "https://x.com/jamaxo97324/status/1980239901246312881"
+        "link": "https://x.com/jamaxo97324/status/1980239901246312881",
+        "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5"
           
           // Add more shortlinks here, example lang to^
       };
