--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         "scale": "https://www.amazon.com/dp/B0BRQF7DC8",
         "renpho": "https://www.amazon.com/dp/B0BRQF7DC8",
         "link": "https://x.com/jamaxo97324/status/1980239901246312881",
-        "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5"
+        "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5",
+        "boots": "https://www.amazon.com/dp/B0DGQGKMGN"
           
           // Add more shortlinks here, example lang to^
       };
