--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         "renpho": "https://www.amazon.com/dp/B0BRQF7DC8",
         "link": "https://x.com/jamaxo97324/status/1980239901246312881",
         "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5",
-        "boots": "https://www.amazon.com/dp/B0DGQGKMGN"
+        "boots": "https://www.amazon.com/dp/B0DGQGKMGN",
+        "prime": "https://x.com/ShopfluxZ/status/1982078746791416127"
+        
           
           // Add more shortlinks here, example lang to^
       };
