--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5",
         "boots": "https://www.amazon.com/dp/B0DGQGKMGN",
         "prime": "https://x.com/ShopfluxZ/status/1982078746791416127"
+        "lockstar": "https://x.com/ShopSignalX/status/1981754757942329602"
         
           
           // Add more shortlinks here, example lang to^
