--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         "litterbox": "https://www.amazon.com/dp/B0DLYDTMP5",
         "boots": "https://www.amazon.com/dp/B0DGQGKMGN",
         "prime": "https://x.com/ShopfluxZ/status/1982078746791416127"
-        "lockstar": "https://x.com/ShopSignalX/status/1981754757942329602"
+        "lockstar": "https://x.com/ShopSignalX/status/1981754757942329602",
+        "webcam": "https://x.com/ScopeSavvyZ/status/1982738497082466778"
         
           
           // Add more shortlinks here, example lang to^
