--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         "prime": "https://x.com/ShopfluxZ/status/1982078746791416127"
         "lockstar": "https://x.com/ShopSignalX/status/1981754757942329602",
         "webcam": "https://x.com/ScopeSavvyZ/status/1982738497082466778",
-        "diaperbag": "https://x.com/ShopRadarX/status/1982745851744370807"
+        "diaperbag": "https://x.com/ShopRadarX/status/1982745851744370807",
+        "clippers": "https://x.com/FlashScopeS/status/1983521077788893463"
         
           
           // Add more shortlinks here, example lang to^
